--- a/.github/workflows/pyinstaller_test.yml
+++ b/.github/workflows/pyinstaller_test.yml
@@ -14,12 +14,11 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: 安装python环境
-        uses: actions/setup-python@v3
+      - uses: actions/setup-python@v3
         with:
-          python-version: '3.9'
-          cache: 'pip'
-
+          python-version: '3.9' # Version range or exact version of a Python version to use, using SemVer's version range syntax
+          architecture: 'x64' # optional x64 or x86. Defaults to x64 if not specified
+          
       - name: 安装pyinstaller
         run: pip install pyinstaller
 
