--- a/.github/workflows/AndroidAppBuild.yml
+++ b/.github/workflows/AndroidAppBuild.yml
@@ -28,7 +28,7 @@ jobs:
         run: |
           git clone ${{ github.event.inputs.Project }}
           ls -a
-          mv ${{ github.event.inputs.ProjectName }} /
+          cd ./${{ github.event.inputs.ProjectName }}/
           
       - name: 授予gradlew執行權限
         run: chmod +x gradlew
