--- a/.github/workflows/AndroidAppBuild.yml
+++ b/.github/workflows/AndroidAppBuild.yml
@@ -22,7 +22,7 @@ jobs:
         uses: actions/setup-java@v3
         with:
           distribution: 'temurin'
-          java-version: '11'
+          java-version: '8'
           
       - name: 安裝CMAKE
         uses: lukka/get-cmake@latest
@@ -40,6 +40,7 @@ jobs:
       - name: 構建Release
         run: |
           cd ./${{ github.event.inputs.ProjectName }}/
+          ./gradlew build
           ./gradlew assembleRelease
           
       - name: 上傳Artifact
