--- a/.github/workflows/blsp.yml
+++ b/.github/workflows/blsp.yml
@@ -39,13 +39,14 @@ jobs:
         id: setup-ndk
         with:
           ndk-version: r25b
-          
+          #git submodule update --init
       - name: 跑
         run: |
           git clone git@github.com:ljlVink/LinspirerDemo.git
           cd ./LinspirerDemo
-          git submodule update --init
           cd ./LinspirerDemo-master
+          rm -rf ./hackmdm
+          git clone git@github.com:ljlVink/HackMdm-core.git hackmdm
           chmod 777 gradlew
           ./${{ github.event.inputs.BCommand }}
 
