--- a/.github/workflows/blsp.yml
+++ b/.github/workflows/blsp.yml
@@ -47,6 +47,8 @@ jobs:
           
       - name: 跑
         run: |
+          git config --global user.name "Tonyha7"
+          git config --global user.email "tonyha7@outlook.jp"
           git clone git@github.com:ljlVink/LinspirerDemo.git
           cd ./LinspirerDemo
           git submodule update --init
