--- a/.github/workflows/blsp.yml
+++ b/.github/workflows/blsp.yml
@@ -47,12 +47,11 @@ jobs:
           
       - name: 跑
         run: |
-          git config --global user.name "Tonyha7"
-          git config --global user.email "tonyha7@outlook.jp"
+          df -h
           git clone git@github.com:ljlVink/LinspirerDemo.git
-          cd ./LinspirerDemo
-          git submodule update --init
-          cd ./LinspirerDemo-master
+          cd ./LinspirerDemo/LinspirerDemo-master
+          rm -rf ./hackmdm
+          git clone git@github.com:ljlVink/HackMdm-core.git hackmdm
           mkdir libs
           cp ./hackmdm/libs/* ./libs
           cd ./libs/
