--- a/.github/workflows/unpackimg.yml
+++ b/.github/workflows/unpackimg.yml
@@ -18,7 +18,7 @@ jobs:
       - name: 准备
         run: |
           sudo apt update
-          sudo apt install git device-tree-compiler lz4 xz-utils zlib1g-dev openjdk-17-jdk gcc g++ python3 python-is-python3 p7zip-full
+          sudo apt install device-tree-compiler p7zip-full
           git clone https://github.com/cfig/Android_boot_image_editor work --depth=1
 
       - name: 安裝JDK
