--- a/.github/workflows/Ytdl.yml
+++ b/.github/workflows/Ytdl.yml
@@ -19,6 +19,7 @@ jobs:
         run: |
           sudo curl -L https://yt-dl.org/downloads/latest/youtube-dl -o /usr/local/bin/youtube-dl
           sudo chmod a+rx /usr/local/bin/youtube-dl
+          sudo -H pip install --upgrade youtube-dl
           
       - name: Download Video
         run: |
