--- a/.github/workflows/Ytdl.yml
+++ b/.github/workflows/Ytdl.yml
@@ -25,7 +25,7 @@ jobs:
         run: |
           mkdir temp
           cd temp
-          youtube-dl -f best ${{ github.event.inputs.URL }}
+          youtube-dl -f best "${{ github.event.inputs.URL }}"
 
           
       - name: Upload 2 Artifact
