--- a/.github/workflows/Ytdl.yml
+++ b/.github/workflows/Ytdl.yml
@@ -34,11 +34,17 @@ jobs:
           cd temp
           for video in `ls $*`
           do
-            if [[ $(du -sb "$video" | awk "{print $1}") -gt "$((2 * 1024 *1024 *1024))" ]];
-            then
-              split -d -b 1024m - "$video"
-            fi
+            video=`tr "\?" " " <<<$video`
+            videof="$1"/"$video"
+            if [ -d "$videof" ];then
+              getLocalizeString "$videof"
+            else
+              if [[ $(du -sb "$videof" | awk "{print $1}") -gt "$((2 * 1024 *1024 *1024))" ]];
+              then
+                split -d -b 1024m - "$video"
+              fi
           done
+        fi
 
       - name: Upload
         uses: softprops/action-gh-release@v1
