--- a/.github/workflows/magisk.yml
+++ b/.github/workflows/magisk.yml
@@ -26,11 +26,15 @@ jobs:
 
       - name: Download OTA & Extract
         run: |
+          apt install rename
           mkdir magisk
           cd magisk
           wget "${{ github.event.inputs.MAGISK }}" -O Magisk.zip
           unzip Magisk.zip
-          ls
+          cd ./lib/x86_64
+          rename 'lib' '' *
+          rename '.so' '' *
+          cd ../../
+          mv ./lib/x86_64/* ./assets/
           tree
           
-
