--- a/.github/workflows/magisk.yml
+++ b/.github/workflows/magisk.yml
@@ -32,7 +32,7 @@ jobs:
           wget "${{ github.event.inputs.MAGISK }}" -O Magisk.zip
           unzip Magisk.zip >> /dev/null
           cd ./lib/x86_64
-          rename "s//lib//" *
+          rename "s//^lib//" *
           rename "s//.so//" *
           ls
           cd ../../
