--- a/.github/workflows/magisk.yml
+++ b/.github/workflows/magisk.yml
@@ -33,8 +33,8 @@ jobs:
           unzip Magisk.zip >> /dev/null
           cd ./lib/x86_64
           rename 's/(lib|\.so)//g' *
-          ls
           cd ../../
-          mv ./lib/x86_64/* ./assets/
-          tree
+          mv ./lib/x86_64/* ./assets
+          chmod a+x ./assets
+          ./assets/boot_patch.sh
           
