--- a/.github/workflows/magisk.yml
+++ b/.github/workflows/magisk.yml
@@ -8,14 +8,17 @@ on:
       MAGISK:
         required: true
         default: 'https://github.com/topjohnwu/Magisk/releases/download/v26.1/Magisk-v26.1.apk'
-
+      PATCH_PARTITION:
+        required: true
+        default: 'boot'
+      
 jobs:
   build:
     permissions:
       contents: write
     runs-on: ubuntu-latest
     steps:
-      - name: Download Program
+      - name: Download OTA & Extract
         run: |
           sudo apt install -y rename
           mkdir temp
@@ -24,10 +27,14 @@ jobs:
           tar -zxvf tool.tar.gz
           rm tool.tar.gz
           chmod +x ./android-ota-extractor
+          wget "${{ github.event.inputs.URL }}" -O OTA.zip
+          ./android-ota-extractor ./OTA.zip ${{ github.event.inputs.PATCH_PARTITION }}
+          cd ..
+          mkdir magisk
+          mv temp/${{ github.event.inputs.PATCH_PARTITION }}.img magisk
 
       - name: Download OTA & Extract
         run: |
-          mkdir magisk
           cd magisk
           wget "${{ github.event.inputs.MAGISK }}" -O Magisk.zip
           unzip Magisk.zip >> /dev/null
@@ -36,19 +43,8 @@ jobs:
           cd ../../
           mv ./lib/x86_64/* ./assets
           chmod -R a+x ./assets/*
-          bash ./assets/boot_patch.sh
-          
-
-      - name: Download OTA & Extract
-        run: |
-          mkdir magisk
-          cd magisk
-          wget "${{ github.event.inputs.MAGISK }}" -O Magisk.zip
-          unzip Magisk.zip >> /dev/null
-          cd ./lib/x86_64
-          rename 's/(lib|\.so)//g' *
-          cd ../../
-          mv ./lib/x86_64/* ./assets
-          chmod -R a+x ./assets/*
-          ./assets/boot_patch.sh
-          
+          cd assets
+          bash ./assets/boot_patch.sh ../${{ github.event.inputs.PATCH_PARTITION }}.img
+          cd ..
+          rm -rf res
+          tree
