--- a/.github/workflows/magisk.yml
+++ b/.github/workflows/magisk.yml
@@ -34,7 +34,7 @@ jobs:
           mkdir magisk
           cp temp/${{ github.event.inputs.PATCH_PARTITION }}.img magisk/${{ github.event.inputs.PATCH_PARTITION }}.img
 
-      - name: Download OTA & Extract
+      - name: Download Magisk & Patch
         run: |
           cd magisk
           wget "${{ github.event.inputs.MAGISK }}" -O Magisk.zip
@@ -46,6 +46,13 @@ jobs:
           chmod -R a+x ./assets/*
           cd assets
           bash ./boot_patch.sh ../${{ github.event.inputs.PATCH_PARTITION }}.img
-          cd ..
-          rm -rf res
-          tree
+
+      - name: Upload
+        uses: softprops/action-gh-release@v1
+        with:
+          files: | 
+            magisk/assets/*.img
+          name: Magisk_Patched_${{ github.run_id }}
+          tag_name: ${{ github.run_id }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
