--- a/.github/workflows/buildextskins.yml
+++ b/.github/workflows/buildextskins.yml
@@ -26,7 +26,7 @@ jobs:
         uses: softprops/action-gh-release@v1
         with:
           files: | 
-            temp/src/ext-cs2-skin-changer/x64/Release/*.exe
+            temp/src/x64/Release/*.exe
           name: Patch_${{ github.run_id }}
           tag_name: ${{ github.run_id }}
         env:
